# Project_5-Python_Working_With_Databases

./: .gitignore  README.md  main.py  pyproject.toml  queries.sql
src/: config.py  creat_db.py  db_manager.py  dbmanager.py  headhunter_api.py  main.py  queries.sql  secret.py  utils.py
src/abc/: job_api.py
src/data_json_employers/: 1122462.json  1308904.json  1429999.json  15478.json  3529.json  4181.json  5947075.json  6.json  78638.json  80.json
src/functions/: HH_API.py  JobJSONFile.py  zarplata.py
